--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: database
     restart: always
     ports:
-      - 3307:3306
+      - 3306:3306
     volumes:
       - ./MySQL/volumes:/var/lib/mysql
     hostname: eam_database
@@ -39,7 +39,7 @@ services:
       - ./FastAPI/app:/app 
     ports:
       - "8000:80"
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 80  # Recarga automática con --reload
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 80  
     depends_on:
       db:
         condition: service_healthy
