--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     container_name: database
     restart: always
     ports:
-      - 3307:3306
+      - 3306:3306
     volumes:
       - ./MySQL/volumes:/var/lib/mysql
     hostname: eam_database
     networks:
       - net_pylint
     healthcheck:
-        test: ["CMD","mysql", "-u", "root", "-proot"]
+        test: ["CMD","mysql", "-u", "user", "-proot"]
         interval: 30s
-        timeout: 10s
+        timeout: 5s
         retries: 5
 # --------------------------------------------------------------------
   # - The adminer is a tool for managing content in databases.
